--- a/blink-backend/blinkapp/src/main/resources/application.properties
+++ b/blink-backend/blinkapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
@@ -20,9 +20,7 @@ spring.mail.password=vutg kqyd djop rxvl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-debug=true
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
